refactor/check_output17.txt
cargo :     Checking citybound_native v0.10.0 (C:\Users\Fa\Desktop\IAF\citybound\refactor)
En línea: 1 Carácter: 58
+ ... ers\Fa\Desktop\IAF\citybound\refactor; cargo check --lib 2>&1 | Out-F ...
+                                            ~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ci...bound\refactor):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0004]: non-exhaustive patterns: `BuildingType::Farm` not covered
   --> src\render.rs:665:11
    |
665 |     match btype {
    |           ^^^^^ pattern `BuildingType::Farm` not covered
    |
note: `BuildingType` defined here
   --> src\ecs.rs:80:10
    |
 80 | pub enum BuildingType { 
    |          ^^^^^^^^^^^^
 81 |     House, Apartment, Shop, Office, Factory, Farm,
    |                                              ---- not covered
    = note: the matched value is of type `BuildingType`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
673 ~         BuildingType::Police => COLOR_BUILDING_POLICE,
674 ~         BuildingType::Farm => todo!(),
    |

For more information about this error, try `rustc --explain E0004`.
error: could not compile `citybound_native` (lib) due to 1 previous error
